[package]
name = "yt-search"
version = "0.1.0"
authors = ["cyrusng <cyrus.ng@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros","rt-threaded"] }
structopt = "0.3"
futures = "0.3"
json = "0.12"
prettytable-rs = "0.8"
